Fixing more pages, setup communication between React and coffeescript, more photo cropping progress

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,4 +26,7 @@
 
 .crop-image, .preview-image {
   margin-top: 4rem;
+  img {
+    margin-top: 4rem;
+  }
 }
